# Driver_detector

./: README.md
Driver_detector/: Driver_detector.kicad_prl  Driver_detector.kicad_pro  Driver_detector.kicad_sch  Microcontroller.kicad_sch  Power_management.kicad_sch  Sensor_and_buzzer.kicad_sch
Driver_detector_IoT_systems-2/: CH-101.kicad_sym  NRF52832-QFAA-R.kicad_sym  QFN40P600X600X90-49N.kicad_mod  (+1 more)
code/driver_detector/: CMakeLists.txt  prj.conf
code/driver_detector/src/: main.c
code/driver_detector/src/application/smartsonic-hellochirp-example/inc/: app_config.h
code/driver_detector/src/board/HAL/src/: bsp_misc_samg55.c
code/driver_detector/src/board/common/services/delay/: delay.h
code/driver_detector/src/board/config/: chirp_smartsonic.h
code/driver_detector/src/drivers/chirpmicro/: .gitignore  .jenkins.yml  CreateSourceCodeRelease.bat  README.md  configure.sh
code/driver_detector/src/drivers/chirpmicro/inc/: soniclib.h
code/driver_detector/src/drivers/chirpmicro/src/: ch101_gpr_lowpwr_fw.c
code/driver_detector/src/drivers/chirpmicro/test/: jenkins_build.bat
code/driver_detector/src/drivers/chirpmicro/test/codesize/: README.md  chbsp_chirp_dummy.c  chirp_board_config.h  chirpmicro-codesize.ewd  chirpmicro-codesize.ewp  chirpmicro-codesize.eww
code/driver_detector/src/drivers_nrf/delay/: nrf_delay.h
code/driver_detector/src/drivers_nrf/twi_master/: nrf_drv_twi.c  nrf_drv_twi.h
code/driver_detector/src/libraries/util/: app_error.h  sdk_errors.h
code/driver_detector/src/ultrasound/inc/: ultrasound_display_config_info.h
(+315 files in other folders)
